--- a/src/app/qol-form/qol-form.component.html
+++ b/src/app/qol-form/qol-form.component.html
@@ -3,7 +3,7 @@
   <form (ngSubmit)="onSubmit()">
     <div class="mb-3">
       <label for="status" class="form-label">Status</label>
-      <select class="form-control" id="status" [(ngModel)]="qolData.status"  name="status" required>
+      <select class="form-control" id="status" [(ngModel)]="qolData.status" name="status" required>
         <option value="retiree">Retiree</option>
         <option value="student">Student</option>
         <option value="family">Family</option>
@@ -21,11 +21,12 @@
   </form>
 
   <div *ngIf="showResults" class="results mt-5">
-    <h2>Quality of Life:</h2> <h3>{{ qualityOfLife | json }}    </h3>
+    <h2>Quality of Life:</h2>
+    <h3>{{ qualityOfLife | json }}</h3>
+
     <div *ngIf="showSliders">
-      
       <h4>Score Worth Table</h4>
-      <table class="table">
+      <table class="table table-bordered">
         <thead>
           <tr>
             <th>Score</th>
@@ -35,72 +36,107 @@
         </thead>
         <tbody>
           <tr>
-            <td>25+</td>
+            <td>18+</td>
             <td>Very Very Good</td>
             <td style="color: green;">High</td>
           </tr>
           <tr>
-            <td>20-24</td>
+            <td>14-17</td>
             <td>Pretty Good</td>
             <td style="color: green;">High</td>
           </tr>
           <tr>
-            <td>15-19</td>
+            <td>10-13</td>
             <td>Okay</td>
             <td>Medium</td>
           </tr>
           <tr>
-            <td>10-14</td>
+            <td>5-9</td>
             <td>Acceptable</td>
             <td>Medium</td>
           </tr>
           <tr>
-            <td>0-9</td>
+            <td>0-4</td>
             <td>Bad</td>
             <td style="color: red;">Low</td>
           </tr>
         </tbody>
       </table>
-  
+    </div>
+    <h5>This is the result of the scores found for your adress. The points (1-10) are multiplied by the adjustable sliders and added all together. </h5>
+
+    <div class="data-section">
+      <div class="data-item">
+        <p><strong>Income Data:</strong> {{ incomeData | json }}</p>
+        <p>Points: {{ incomePoints }}</p>
+        <small>Measures average income in district in Euros </small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 25500</span>
+      </div>
+      <div class="data-item">
+        <p><strong>Unemployment Data:</strong> {{ unemploymentData | json }}</p>
+        <p>Points: {{ unemploymentPoints }}</p>
+        <small>Measures Unemployment Density inside of district </small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 80</span>
+      </div>
+      <div class="data-item">
+        <p><strong>Police Stations Nearby:</strong> {{ policeStationsCount }}</p>
+        <p>Points: {{ policePoints }}</p>
+        <small>Measures the amount of police stations within a 1000m radius </small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 2.1</span>
+      </div>
+      <div class="data-item">
+        <p><strong>Schools Nearby:</strong> {{ schoolsCount }}</p>
+        <p>Points: {{ schoolPoints }}</p>
+        <small>Measures the number of schools within a 500m radius  </small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 3.77</span>
+      </div>
+      <div class="data-item">
+        <p><strong>Distance to City Center:</strong> {{ distanceToCenter }} meters</p>
+        <p>Points: {{ distancePoints }}</p>
+        <small>Measures the amount of meters from and to the Stephansplatz  </small>
+      </div>
+      <div class="data-item">
+        <p><strong>Hospitals Nearby:</strong> {{ hospitalCount }}</p>
+        <p>Points: {{ hospitalPoints }}</p>
+        <small>Measures the number of Hospitals within a 2000m radius </small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 2.29</span>
+      </div>
+      <div class="data-item">
+        <p><strong>Green Spaces Nearby:</strong> {{ greenSpaceCount }}</p>
+        <p>Points: {{ greenSpacePoints }}</p>
+        <small>Measures the number of Green Spaces within a 2000m radius  </small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 90</span>
+      </div>
     </div>
 
-    <p><strong>Income Data:</strong> {{ incomeData | json }} <small>  Measures average income in district in Euros,  </small>Average: 25500</p>
-    <p><strong>Unemployment Data:</strong> {{ unemploymentData | json }} <small>  Measures Unempolyment Density inside of district,   </small> Average: 80</p>
-    <p><strong>Police Stations Nearby:</strong> {{ policeStationsCount }} <small> Measures the amount of police stations within a 1000m radius</small>   Average: 2.1</p>
-    <p><strong>Schools Nearby:</strong> {{ schoolsCount }}<small>   Measures the number of schools within a 500m radius</small>   Average: 3.77</p>
-    <p><strong>Distance to City Center:</strong> {{ distanceToCenter }} meters <small>  Measures the amont of meters from and to the Stephansplatz</small>   </p>
-    <p><strong>Hospitals Nearby:</strong> {{ hospitalCount }}<small>  Measures the number of Hospitals within a 2000m radius</small> Average: 2.29</p>
-    <p><strong>Green Spaces Nearby:</strong> {{ greenSpaceCount }}<small>  Measures the number of Green Spaces within a 2000m radius</small>  Average: 90</p>
-
     <h4>Adjust Quality of Life Factors:</h4>
-      <div class="mb-3">
-        <label for="incomeSlider">Income Weight: {{ incomeModifier }}</label>
-        <input type="range" class="form-range" id="incomeSlider" [(ngModel)]="incomeModifier" min="0" max="2" step="0.1">
-      </div>
-      <div class="mb-3">
-        <label for="unemploymentSlider">Unemployment Weight: {{ unemploymentModifier }}</label>
-        <input type="range" class="form-range" id="unemploymentSlider" [(ngModel)]="unemploymentModifier" min="0" max="2" step="0.1">
-      </div>
-      <div class="mb-3">
-        <label for="policeSlider">Police Proximity Weight: {{ policeModifier }}</label>
-        <input type="range" class="form-range" id="policeSlider" [(ngModel)]="policeModifier" min="0" max="2" step="0.1">
-      </div>
-      <div class="mb-3">
-        <label for="schoolSlider">School Proximity Weight: {{ schoolModifier }}</label>
-        <input type="range" class="form-range" id="schoolSlider" [(ngModel)]="schoolModifier" min="0" max="2" step="0.1">
-      </div>
-      <div class="mb-3">
-        <label for="hospitalSlider">Hospital Proximity Weight: {{ hospitalModifier }}</label>
-        <input type="range" class="form-range" id="hospitalSlider" [(ngModel)]="hospitalModifier" min="0" max="2" step="0.1">
-      </div>
-      <div class="mb-3">
-        <label for="CenterSlider">Center Proximity Weight: {{ distanceModifier }}</label>
-        <input type="range" class="form-range" id="CenterSlider" [(ngModel)]="distanceModifier" min="0" max="2" step="0.1">
-      </div>
-      <div class="mb-3">
-        <label for="GreenSpaceSlider">Green Space Weight: {{ greenSpaceModifier }}</label>
-        <input type="range" class="form-range" id="GreenSpaceSlider" [(ngModel)]="greenSpaceModifier" min="0" max="2" step="0.1">
-      </div>
+    <div class="mb-3">
+      <label for="incomeSlider">Income Weight: {{ incomeModifier }}</label>
+      <input type="range" class="form-range" id="incomeSlider" [(ngModel)]="incomeModifier" min="0" max="2" step="0.1">
+    </div>
+    <div class="mb-3">
+      <label for="unemploymentSlider">Unemployment Weight: {{ unemploymentModifier }}</label>
+      <input type="range" class="form-range" id="unemploymentSlider" [(ngModel)]="unemploymentModifier" min="0" max="2" step="0.1">
+    </div>
+    <div class="mb-3">
+      <label for="policeSlider">Police Proximity Weight: {{ policeModifier }}</label>
+      <input type="range" class="form-range" id="policeSlider" [(ngModel)]="policeModifier" min="0" max="2" step="0.1">
+    </div>
+    <div class="mb-3">
+      <label for="schoolSlider">School Proximity Weight: {{ schoolModifier }}</label>
+      <input type="range" class="form-range" id="schoolSlider" [(ngModel)]="schoolModifier" min="0" max="2" step="0.1">
+    </div>
+    <div class="mb-3">
+      <label for="hospitalSlider">Hospital Proximity Weight: {{ hospitalModifier }}</label>
+      <input type="range" class="form-range" id="hospitalSlider" [(ngModel)]="hospitalModifier" min="0" max="2" step="0.1">
+    </div>
+    <div class="mb-3">
+      <label for="CenterSlider">Center Proximity Weight: {{ distanceModifier }}</label>
+      <input type="range" class="form-range" id="CenterSlider" [(ngModel)]="distanceModifier" min="0" max="2" step="0.1">
+    </div>
+    <div class="mb-3">
+      <label for="GreenSpaceSlider">Green Space Weight: {{ greenSpaceModifier }}</label>
+      <input type="range" class="form-range" id="GreenSpaceSlider" [(ngModel)]="greenSpaceModifier" min="0" max="2" step="0.1">
+    </div>
   </div>
-  
 </div>
