--- a/src/app/qol-form/qol-form.component.html
+++ b/src/app/qol-form/qol-form.component.html
@@ -7,6 +7,8 @@
         <option value="retiree">Retiree</option>
         <option value="student">Student</option>
         <option value="family">Family</option>
+        <option value="professional">Professional</option>
+        <option value="single">Single</option>
       </select>
     </div>
     <div class="mb-3">
@@ -16,6 +18,14 @@
     <div class="mb-3">
       <label for="address" class="form-label">Address</label>
       <input type="text" class="form-control" id="address" [(ngModel)]="qolData.address" name="address" required>
+    </div>
+    <div class="mb-3">
+      <label for="latitude" class="form-label">Latitude (optional)</label>
+      <input type="text" class="form-control" id="latitude" [(ngModel)]="qolData.latitude" name="latitude">
+    </div>
+    <div class="mb-3">
+      <label for="longitude" class="form-label">Longitude (optional)</label>
+      <input type="text" class="form-control" id="longitude" [(ngModel)]="qolData.longitude" name="longitude">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
@@ -63,49 +73,48 @@
         </tbody>
       </table>
     </div>
-    <h5>This is the result of the scores found for your adress. The points (1-10) are multiplied by the adjustable sliders and added all together. </h5>
 
     <div class="data-section">
       <div class="data-item">
         <p><strong>Income Data:</strong> {{ incomeData | json }}</p>
         <p>Points: {{ incomePoints }}</p>
-        <small>Measures average income in district in Euros </small>
-        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 25500</span>
+        <small>Measures average income in district in Euros</small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">Average: 25500</span>
       </div>
       <div class="data-item">
         <p><strong>Unemployment Data:</strong> {{ unemploymentData | json }}</p>
         <p>Points: {{ unemploymentPoints }}</p>
-        <small>Measures Unemployment Density inside of district </small>
-        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 80</span>
+        <small>Measures Unemployment Density inside of district</small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">Average: 80</span>
       </div>
       <div class="data-item">
         <p><strong>Police Stations Nearby:</strong> {{ policeStationsCount }}</p>
         <p>Points: {{ policePoints }}</p>
-        <small>Measures the amount of police stations within a 1000m radius </small>
-        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 2.1</span>
+        <small>Measures the amount of police stations within a 1000m radius</small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">Average: 2.1</span>
       </div>
       <div class="data-item">
         <p><strong>Schools Nearby:</strong> {{ schoolsCount }}</p>
         <p>Points: {{ schoolPoints }}</p>
-        <small>Measures the number of schools within a 500m radius  </small>
-        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 3.77</span>
+        <small>Measures the number of schools within a 500m radius</small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">Average: 3.77</span>
       </div>
       <div class="data-item">
         <p><strong>Distance to City Center:</strong> {{ distanceToCenter }} meters</p>
         <p>Points: {{ distancePoints }}</p>
-        <small>Measures the amount of meters from and to the Stephansplatz  </small>
+        <small>Measures the amount of meters from and to the Stephansplatz</small>
       </div>
       <div class="data-item">
         <p><strong>Hospitals Nearby:</strong> {{ hospitalCount }}</p>
         <p>Points: {{ hospitalPoints }}</p>
-        <small>Measures the number of Hospitals within a 2000m radius </small>
-        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 2.29</span>
+        <small>Measures the number of Hospitals within a 2000m radius</small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">Average: 2.29</span>
       </div>
       <div class="data-item">
         <p><strong>Green Spaces Nearby:</strong> {{ greenSpaceCount }}</p>
         <p>Points: {{ greenSpacePoints }}</p>
-        <small>Measures the number of Green Spaces within a 2000m radius  </small>
-        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">  Average: 90</span>
+        <small>Measures the number of Green Spaces within a 2000m radius</small>
+        <span (mouseover)="toggleAverageVisibility(true)" (mouseout)="toggleAverageVisibility(false)" class="average">Average: 90</span>
       </div>
     </div>
 
