--- a/src/app/qol-form/qol-form.component.html
+++ b/src/app/qol-form/qol-form.component.html
@@ -72,6 +72,8 @@
           </tr>
         </tbody>
       </table>
+      <p class="small text-muted">The final quality of life score is calculated by multiplying the points for each factor by their respective weights. The weighted scores are then summed up and averaged to produce the final score.</p>
+
     </div>
 
     <div class="data-section">
